[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "example"
authors = [{name = "Byeonghoon Yoo", email = "bhyoo@bhyoo.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
requires-python = "~=3.11"
dynamic = ["version", "description"]
dependencies = [
    "pandas==1.4.4", # does not packaged for python 3.11
    "uvicorn[standard]~=0.23.0",
    "fastapi~=0.100.0",
    "ujson==5.4.0", # does not packaged for python 3.11
    "pydantic==1.10.13", # does not packaged for python 3.11
]

[project.urls]
Home = "https://github.com/isac322/buildkit-state"

[project.scripts]
print_version = "example:print_version"
